--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,6 +11,7 @@ on:
   push:
     paths:
       - Docker/**
+      - .github/workflows/docker-publish.yml
 
 env:
   # Use docker.io for Docker Hub if empty
