--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -72,10 +72,10 @@ jobs:
         id: build-and-push
         working-directory: Docker
         run: |
-          echo ${GITHUB_REF#refs/*/}
-          echo ${{ github.ref_name }}
-          echo "$(git tag | sort --version-sort | tail -n1)"
-          echo "$(git rev-parse --short HEAD)" 
+          echo {GITHUB_REF#refs/*/}: "${GITHUB_REF#refs/*/}"
+          echo {{ github.ref_name }}: "${{ github.ref_name }}"
+          echo tag: "$(git tag | sort --version-sort | tail -n1)"
+          echo short-sha: "$(git rev-parse --short HEAD)" 
           docker buildx build \
               --platform linux/amd64,linux/arm64 \
               --push \
