--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -75,12 +75,13 @@ jobs:
           echo {GITHUB_REF#refs/*/}: "${GITHUB_REF#refs/*/}"
           echo {{ github.ref_name }}: "${{ github.ref_name }}"
           echo tag: "$(git tag | sort --version-sort | tail -n1)"
+          echo {{steps.tag.outputs.tag}} "${{steps.tag.outputs.tag}}"
           echo short-sha: "$(git rev-parse --short HEAD)" 
           docker buildx build \
               --platform linux/amd64,linux/arm64 \
               --push \
               --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
-              --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.tag }}-"$(git rev-parse --short HEAD)" \
+              --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.tag }}-"$(git rev-parse --short HEAD)" \
               .
 
       # Sign the resulting Docker image digest except on PRs.
