--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -80,7 +80,7 @@ jobs:
           echo {GITHUB_REF#refs/*/}: "${GITHUB_REF#refs/*/}"
           echo {{ github.ref_name }}: "${{ github.ref_name }}"
           echo tag: "$(git tag | sort --version-sort | tail -n1)"
-          echo {{steps.tag.outputs.tag}} "${{steps.tag.outputs.tag}}"
+          echo el puto tag: "$(git describe --tags `git rev-list --tags --max-count=1`)"
           echo short-sha: "$(git rev-parse --short HEAD)" 
           docker buildx build \
               --platform linux/amd64,linux/arm64 \
