--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -75,7 +75,7 @@ jobs:
           echo {GITHUB_REF#refs/*/}: "${GITHUB_REF#refs/*/}"
           echo {{ github.ref_name }}: "${{ github.ref_name }}"
           echo tag: "$(git tag | sort --version-sort | tail -n1)"
-          echo el puto tag: "$(git describe --tags `git rev-list --tags --max-count=1`)"
+          echo el tag: "$(git describe)"
           echo short-sha: "$(git rev-parse --short HEAD)" 
           docker buildx build \
               --platform linux/amd64,linux/arm64 \
