--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -72,18 +72,16 @@ jobs:
         id: build-and-push
         working-directory: Docker
         run: |
-          echo {GITHUB_REF#refs/*/}: "${GITHUB_REF#refs/*/}"
-          echo {{ github.ref_name }}: "${{ github.ref_name }}"
           git clone https://github.com/garciagenrique/test_actions.git
           cd test_actions
-          echo tag: "$(git tag | sort --version-sort | tail -n1)"
-          echo el tag: "$(git describe)"
-          echo short-sha: "$(git rev-parse --short HEAD)" 
+          echo tag: "tag=$(git tag | sort --version-sort | tail -n1)"
+          echo short-sha: "short-sha=$(git rev-parse --short HEAD)" 
+          cd .. && rm -rf test_actions
           docker buildx build \
               --platform linux/amd64,linux/arm64 \
               --push \
               --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
-              --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.tag }}-"$(git rev-parse --short HEAD)" \
+              --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:$tag-$short-sha \
               .
 
       # Sign the resulting Docker image digest except on PRs.
