--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -81,7 +81,7 @@ jobs:
               --platform linux/amd64,linux/arm64 \
               --push \
               --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
-              --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:$"{tag}"-$"{short-sha}"" \
+              --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:$"{tag}"-$"{short-sha}" \
               .
 
       # Sign the resulting Docker image digest except on PRs.
