--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -2,8 +2,8 @@ FROM rucio/rucio-server:release-1.30.0
 
 # cleanup yum cache
 RUN yum upgrade -y \
-    && yum clean all \
-    && rm -rf /var/cache/yum
+    && yum clean all 
+#    && rm -rf /var/cache/yum
 
 # install useful tools
 RUN yum install -y git htop wget voms-clients-cpp gfal2* python3-gfal2 a-certificates ca-policy-egi-core
