--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -75,25 +75,11 @@ jobs:
           git clone https://github.com/garciagenrique/test_actions.git
           cd test_actions
           echo "tag=$(git tag | sort --version-sort | tail -n1)"
-          echo "short-sha=$(git rev-parse --short HEAD)" 
+          echo "short_sha=$(git rev-parse --short HEAD)" 
           cd .. && rm -rf test_actions
-          export final_tag="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}_${short-sha}"
+          export final_tag="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}_${short_sha}"
           docker buildx build \
               --push \
               --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
               --tag $final_tag \
               .
-
-
-      # Sign the resulting Docker image digest except on PRs.
-      # This will only write to the public Rekor transparency log when the Docker
-      # repository is public to avoid leaking data.  If you would like to publish
-      # transparency data even for private images, pass --force to cosign below.
-      # https://github.com/sigstore/cosign
-      - name: Sign the published Docker image
-        if: ${{ github.event_name != 'pull_request' }}
-        env:
-          COSIGN_EXPERIMENTAL: "true"
-        # This step uses the identity token to provision an ephemeral certificate
-        # against the sigstore community Fulcio instance.
-        run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push.outputs.digest }}
