take home message: NOT user docker buildx yet

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -79,8 +79,7 @@ jobs:
           cd .. && rm -rf test_actions
           export tag=$(git tag | sort --version-sort | tail -n1 | tr -d '.')
           export short_sha=$(git rev-parse --short HEAD)
-          docker buildx build \
-              --push \
-              --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
-              .
+          docker build . --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest 
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}_${short_sha}
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}_${short_sha}
