--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -74,10 +74,10 @@ jobs:
         run: |
           git clone https://github.com/garciagenrique/test_actions.git
           cd test_actions
-          echo "tag=$(git tag | sort --version-sort | tail -n1 | tr -d '.')"
+          echo "tag=$(git tag | sort --version-sort | tail -n1)"
           echo "short_sha=$(git rev-parse --short HEAD)" 
           cd .. && rm -rf test_actions
-          export tag=$(git tag | sort --version-sort | tail -n1 | tr -d '.')
+          export tag=$(git tag | sort --version-sort | tail -n1)
           export short_sha=$(git rev-parse --short HEAD)
           docker build . --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest 
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
