--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -27,7 +27,7 @@ RUN mkdir -p /etc/grid-security/vomsdir/escape \
 RUN curl -o /usr/bin/kubectl -L https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
 RUN chmod +x /usr/bin/kubectl
 
-WORKDIR $HOME
+#WORKDIR $HOME
 USER $NB_UID
 
 ENTRYPOINT ["/bin/bash"]
