--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -79,7 +79,15 @@ jobs:
           cd .. && rm -rf test_actions
           export tag=$(git tag | sort --version-sort | tail -n1)
           export short_sha=$(git rev-parse --short HEAD)
-          docker build . --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest 
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}_${short_sha}
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}_${short_sha}
+          echo ${{ env.REGISTRY }}
+          echo ${{ env.IMAGE_NAME }}
+          echo ${tag}_${short_sha}
+          echo ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}_${short_sha}
+          echo ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}+${short_sha}
+          echo ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}-${short_sha}
+          echo ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}${short_sha}
+          
+#docker build . --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest 
+#docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+#docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}_${short_sha}
+#docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${tag}_${short_sha}
