--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -78,8 +78,9 @@ jobs:
           echo "short_sha=$(git rev-parse --short HEAD)" 
           export the_tag=$(git tag | sort --version-sort | tail -n1)
           export short_sha=$(git rev-parse --short HEAD)
+          cd ..
           docker build . --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest 
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${the_tag}+${short_sha}
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${the_tag}+${short_sha}
-          cd .. && rm -rf test_actions          
+          rm -rf test_actions          
