--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,6 +11,7 @@ env:
   DIR_NAME: test-actions
   IMAGE_NAME: ${{ github.repository }}-$DIR_NAME
   SCRIPT_NAME: docker-publish
+  WORKDIR: Docker
 
 
 on:
@@ -71,8 +72,10 @@ jobs:
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
         id: build-and-push
-        working-directory: Docker
+        working-directory: ${{ env.WORKDIR }}
         run: |
+          pwd
+          echo ${{ env.WORKDIR }}
           echo first tests
           GIT_TAG=${{ steps.release_tag.outputs.version }}
           echo $GIT_TAG
