--- a/.github/workflows/repo-diagram.yaml
+++ b/.github/workflows/repo-diagram.yaml
@@ -1,10 +1,11 @@
 # name: Create diagram of the repository
 
+name: Create diagram
 on:
+  workflow_dispatch: {}
   push:
     branches:
       - main
-      
 jobs:
   get_data:
     runs-on: ubuntu-latest
@@ -13,3 +14,5 @@ jobs:
         uses: actions/checkout@master
       - name: Update diagram
         uses: githubocto/repo-visualizer@main
+        with:
+          excluded_paths: "ignore,.github"
