--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -74,6 +74,11 @@ jobs:
         id: build-and-push
         working-directory: ${{ env.WORKDIR }}
         run: |
+          echo "test {GITHUB_REF#refs/*/}: ${GITHUB_REF#refs/*/}"
+          echo "test {GITHUB_REF/refs\/tags\//}: ${GITHUB_REF/refs\/tags\//}"
+          echo "testing cut second and thrid word between / :"
+          echo "second: ${GITHUB_REF} | cut -d/ -f2"
+          echo "third: ${GITHUB_REF} | cut -d/ -f3"
           pwd
           echo ${{ env.WORKDIR }}
           echo first tests
