--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -77,8 +77,8 @@ jobs:
           echo "test {GITHUB_REF#refs/*/}: ${GITHUB_REF#refs/*/}"
           echo "test {GITHUB_REF/refs\/tags\//}: ${GITHUB_REF/refs\/tags\//}"
           echo "testing cut second and thrid word between / :"
-          echo "second: ${GITHUB_REF} | cut -d/ -f2"
-          echo "third: ${GITHUB_REF} | cut -d/ -f3"
+          echo "second: ${GITHUB_REF}" | cut -d/ -f2
+          echo "third: ${GITHUB_REF}" | cut -d/ -f3
           pwd
           echo ${{ env.WORKDIR }}
           echo first tests
