--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -74,8 +74,14 @@ jobs:
         id: build-and-push
         working-directory: ${{ env.WORKDIR }}
         run: |
+          echo "{GITHUB_REF} is ${GITHUB_REF}"
           echo "test {GITHUB_REF#refs/*/}: ${GITHUB_REF#refs/*/}"
+          echo "var1=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+          echo output of var1 is $var1
           echo "test {GITHUB_REF/refs\/tags\//}: ${GITHUB_REF/refs\/tags\//}"
+          echo "var2=$${GITHUB_REF/refs\/tags\//}" >> $GITHUB_OUTPUT
+          echo output of var2 is $var2
+          
           echo "testing cut second and thrid word between / :"
           echo "second: ${GITHUB_REF}" | cut -d/ -f2
           echo "third: ${GITHUB_REF}" | cut -d/ -f3
@@ -112,3 +118,12 @@ jobs:
 #          docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${the_tag}_${short_sha}
 #          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${the_tag}_${short_sha}
 #          rm -rf test_actions          
+      - name: Test saved vars
+        id: test
+        run: |
+          echo $var1
+          echo ${{ env.var1 }}
+          echo "--------------"
+          echo $var2
+          echo ${{ steps.vars.outputs.var2 }} 
+      
